--- a/sprawozdanie.ipynb
+++ b/sprawozdanie.ipynb
@@ -16,15 +16,47 @@
    "source": [
     "## Cel Projektu\n",
     "<p style='text-align: justify;'>\n",
-    "Jako cel obraliśmy sobie stworzenie maszynowego odpowiednika człowieka(tzw. agenta) grającego w grę \n",
-    "komputerową, który ucząc się na własnych błędach, będzie osiągał w niej coraz to lepsze rezultaty. \n",
-    "Do tego celu posłużył nam paradygmat procesu uczenia nazywany uczeniem ze wzmocnieniem, polegający na \n",
-    "umieszczeniu uczącego się agenta w nieznanym mu dotąd środowisku i pozwoleniu na wykonywanie dowolnych \n",
-    "interakcji z otoczeniem. Agent w trakcie eksploracji doświadcza wielu różnych sytuacji zwanych stanami. \n",
-    "Znajdując się w danym stanie agent wybiera, którą z obecnie możliwych akcji wykona. Za dokonany \n",
-    "wybpr otrzymuje pewną nagrodę lub karę. Wraz z upływem czasu agent uczy się, jakie \n",
-    "czynności bardziej opłaca się wykonać, aby otrzymać jak największą nagrodę.\n",
+    "Jako cel obraliśmy sobie stworzenie maszynowego odpowiednika człowieka grającego w grę \n",
+    "komputerową(tzw. agenta), który ucząc się na własnych błędach, będzie osiągał w niej coraz to lepsze \n",
+    "rezultaty. Do tego celu nadaje się paradygmat procesu uczenia nazywany uczeniem ze wzmocnieniem,\n",
+    "polegający na umieszczeniu uczącego się agenta w nieznanym mu dotąd środowisku i pozwoleniu na \n",
+    "wykonywanie dowolnych interakcji z otoczeniem. Agent w trakcie eksploracji doświadcza wielu różnych \n",
+    "sytuacji zwanych stanami. Znajdując się w danym stanie wybiera, którą z obecnie możliwych akcji \n",
+    "wykona, za co  finalnie otrzymuje pewną nagrodę lub karę. Wszystkie informacje na temat ruchów i \n",
+    "nagród przechowuje w pamięci, aby nastepnie na ich podstawie móc oceniać, jaka akcja da mu \n",
+    "największą nagrodę. Pozornie wydawałoby się, że rozwiązanie to nadaje się niemal idealnie do sytuacji \n",
+    "wymagających, aby agent sam zebrał dane, na których następnie będzie się uczył, ale niestety posiada ono \n",
+    "jedną znaczącą wadę - wraz z upływem czasu ilość danych w pamięci agenta rośnie, co z kolei powoduje \n",
+    "spowolnienie podejmowania decyzji, a finalnie może nawet prowadzić do zapełnienia pamięci \n",
+    "fizycznej urządzenia.\n",
     "</p>\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<p style='text-align: justify;'>\n",
+    "Aby uniknąć problemów związanych z nadmiarem danych, postanowiliśmy znaleźć strukturę, która pozwoli\n",
+    "zgeneralizować dane zamiast je gromadzić i stale przeszukiwać.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<p style='text-align: justify;'>\n",
+    "Dokładniej rzecz biorąc, zdecydowaliśmy się na zastosowanie głębokiego Q-learningu, czyli połączenia\n",
+    "uczenia ze wzmocnieniem oraz uczenia głębokiego. Polega ona na iteracyjnym ulepszaniu wyborów\n",
+    "dokonywanych przez agenta za pomocą Q-wartości. Q-wartość to pewna funkcja <b>Q(S, A)</b>,\n",
+    "szacująca jak bardzo opłąca się podjąć akcję A będąc w stanie S.\n",
+    "</p>\n",
+    "\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
