--- a/sprawozdanie.ipynb
+++ b/sprawozdanie.ipynb
@@ -39,8 +39,15 @@
    "cell_type": "markdown",
    "source": [
     "<p style='text-align: justify;'>\n",
-    "Aby uniknąć problemów związanych z nadmiarem danych, postanowiliśmy znaleźć strukturę, która pozwoli\n",
-    "zgeneralizować dane zamiast je gromadzić i stale przeszukiwać.\n"
+    "Aby uniknąć problemów związanych z nadmiarem danych, zdecydowaliśmny się na wybór paradygmatu, który \n",
+    "pozwala zgeneralizować zbiór danych zamiast nieskończenie je gromadzić i przeszukiwać. Dokładniej \n",
+    "rzecz biorąc, wybór padł na zastosowanie głębokiego Q-learningu, czyli połączenia uczenia \n",
+    "ze wzmocnieniem z uczeniem głębokim. Polega on na zmniejszeniu nieograniczonej pamięci agenta \n",
+    "do relatywnie małego bufora pamiętającego N ostatnich wyborów i stworzenia dla niego modelu sieci \n",
+    "neuronowej, aby następnie iteracyjnie trenowanać go za pomocą Q-wartości, czyli pewnej funkcji \n",
+    "<b>Q(S, A)</b> szacującej jak bardzo opłąca się podjąć akcję A będąc w stanie S. Wszystkie powyższe\n",
+    "kroki prowadzą do stworzenia modelu Deep Q-Network(DQN).\n",
+    "</p>\n"
    ],
    "metadata": {
     "collapsed": false
@@ -50,13 +57,12 @@
    "cell_type": "markdown",
    "source": [
     "<p style='text-align: justify;'>\n",
-    "Dokładniej rzecz biorąc, zdecydowaliśmy się na zastosowanie głębokiego Q-learningu, czyli połączenia\n",
-    "uczenia ze wzmocnieniem oraz uczenia głębokiego. Polega ona na iteracyjnym ulepszaniu wyborów\n",
-    "dokonywanych przez agenta za pomocą Q-wartości. Q-wartość to pewna funkcja <b>Q(S, A)</b>,\n",
-    "szacująca jak bardzo opłąca się podjąć akcję A będąc w stanie S.\n",
-    "</p>\n",
-    "\n",
-    "\n"
+    "Jako innowacyjną część projektu postanowiliśmy wytrenować całą populację agentów, aby następnie zebrać\n",
+    "ich pamięci i w sposób ewolucyjny. Uściślając, chcieliśmy zebrać pamięci \n",
+    "przechowywane przez pewną liczbę agentów i na ich podstawie stworzyć jendą super pamięć pozwalającą\n",
+    "na wytrenowanie najlepszego modelu.\n",
+    " \n",
+    "</p>\n"
    ],
    "metadata": {
     "collapsed": false
