--- a/sprawozdanie.ipynb
+++ b/sprawozdanie.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# <center>Agent DQN doszkalany ewolucyjnie</center>\n",
     "<center><img src=\"https://media.giphy.com/media/dyde6O8yn4oRh7R1Vk/source.gif\" width=\"460\" height=\"280\" /></center>\n",
     "\n",
     "*<center>Wykonali</center>*\n",
     "*<center>Jakub Gros, Sebastian Kucharzyk</center>*\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## Cel Projektu\n",
+    "## Cel i Analiza Projektu\n",
     "<p style='text-align: justify;'>\n",
     "Jako cel obraliśmy sobie stworzenie maszynowego odpowiednika człowieka grającego w grę \n",
     "komputerową(tzw. agenta), który ucząc się na własnych błędach, będzie osiągał w niej coraz to lepsze \n",
@@ -39,14 +41,14 @@
    "cell_type": "markdown",
    "source": [
     "<p style='text-align: justify;'>\n",
-    "Aby uniknąć problemów związanych z nadmiarem danych, zdecydowaliśmny się na wybór paradygmatu, który \n",
-    "pozwala zgeneralizować zbiór danych zamiast nieskończenie je gromadzić i przeszukiwać. Dokładniej \n",
+    "Aby uniknąć problemów związanych z nadmiarem danych, zdecydowaliśmny się na wykorzystanie innego paradygmatu, \n",
+    "który pozwala zgeneralizować zbiór danych zamiast nieskończenie go poszerzać i przeszukiwać. Dokładniej \n",
     "rzecz biorąc, wybór padł na zastosowanie głębokiego Q-learningu, czyli połączenia uczenia \n",
     "ze wzmocnieniem z uczeniem głębokim. Polega on na zmniejszeniu nieograniczonej pamięci agenta \n",
-    "do relatywnie małego bufora pamiętającego N ostatnich wyborów i stworzenia dla niego modelu sieci \n",
-    "neuronowej, aby następnie iteracyjnie trenowanać go za pomocą Q-wartości, czyli pewnej funkcji \n",
-    "<b>Q(S, A)</b> szacującej jak bardzo opłąca się podjąć akcję A będąc w stanie S. Wszystkie powyższe\n",
-    "kroki prowadzą do stworzenia modelu Deep Q-Network(DQN).\n",
+    "do relatywnie małego bufora pamiętającego N ostatnich wyborów, który po każdej akcji wykonannej \n",
+    "przez agenta jest wykorzystywany do  iteracyjnego dotrenowywania sieci neuronowej. Wykonuje się to za \n",
+    "pomocą Q-wartości, czyli pewnej funkcji  <b>Q(S, A)</b> szacującej jak bardzo opłąca się podjąć akcję A \n",
+    "będąc w stanie S. Cały powyższy proces prowadzi do stworzenia modelu Deep Q-Network(DQN).\n",
     "</p>\n"
    ],
    "metadata": {
@@ -57,11 +59,20 @@
    "cell_type": "markdown",
    "source": [
     "<p style='text-align: justify;'>\n",
-    "Jako innowacyjną część projektu postanowiliśmy wytrenować całą populację agentów, aby następnie zebrać\n",
-    "ich pamięci i w sposób ewolucyjny. Uściślając, chcieliśmy zebrać pamięci \n",
-    "przechowywane przez pewną liczbę agentów i na ich podstawie stworzyć jendą super pamięć pozwalającą\n",
-    "na wytrenowanie najlepszego modelu.\n",
-    " \n",
+    "Niemniej jednak nie chcieliśmy ograniczać się jedynie do uczenia głębokiego, więc postanowiliśmy\n",
+    "znaleźć zastosowanie dla innej dziedziny z zakresu stucznej inteligencji - algorytmów ewolucyjnych. \n",
+    "Przeanalizowaliśmy zatem sposób działania modelu DQN i znaleźliśmy trzy obszary, które potencjalnie\n",
+    "nadawałyby się do ulepszenia ewolucyjnego:\n",
+    "</p>\n",
+    "\n",
+    "1. Kształt sieci neuronowej\n",
+    "2. Wagi połączeń międzyneuronowych\n",
+    "3. Dane przechowywane w pamięci agentów\n",
+    "\n",
+    "<p style='text-align: justify;'>\n",
+    "Spośród powyższych możliwości po dogłębnej analizie\n",
+    "najciekawszym i(być może) najefektywniejszym podejściem będzie wytrenowanie pewnej populacji agentów, aby następnie poddawać ich \n",
+    "operacjom genetycznym\n",
     "</p>\n"
    ],
    "metadata": {
@@ -121,10 +132,7 @@
     "aby otrzymać agenta z najlepszą bazą przypadków do nauki\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -168,8 +176,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
@@ -181,47 +188,59 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Header"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Header"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### Header"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "##### Header"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
