Added part about evolution alg

--- a/sprawozdanie.ipynb
+++ b/sprawozdanie.ipynb
@@ -61,8 +61,8 @@
     "<p style='text-align: justify;'>\n",
     "Niemniej jednak nie chcieliśmy ograniczać się jedynie do uczenia głębokiego, więc postanowiliśmy\n",
     "znaleźć zastosowanie dla innej dziedziny z zakresu stucznej inteligencji - algorytmów ewolucyjnych. \n",
-    "Przeanalizowaliśmy zatem sposób działania modelu DQN i znaleźliśmy trzy obszary, które potencjalnie\n",
-    "nadawałyby się do ulepszenia ewolucyjnego:\n",
+    "Patrząc na sposób działania modelu DQN można spostrzec trzy obszary, które potencjalnie nadają się \n",
+    "do ulepszenia ewolucyjnego:\n",
     "</p>\n",
     "\n",
     "1. Kształt sieci neuronowej\n",
@@ -70,9 +70,13 @@
     "3. Dane przechowywane w pamięci agentów\n",
     "\n",
     "<p style='text-align: justify;'>\n",
-    "Spośród powyższych możliwości po dogłębnej analizie\n",
-    "najciekawszym i(być może) najefektywniejszym podejściem będzie wytrenowanie pewnej populacji agentów, aby następnie poddawać ich \n",
-    "operacjom genetycznym\n",
+    "Po dokładnym przeanalizowaniu powyższych możliwości zdecydowaliśmy o odrzuceniu opcji numer 1 oraz 3. \n",
+    "O wyeliminowaniu manipulacji kształtem sieci neuronowej zadecydował fakt, że ... . Natomiast jeśli \n",
+    "chodzi o trzecią opcję, to jej odrzucenie wynika z natury DQN, której agent przechowuje w pamięci \n",
+    "jedynie mały  fragment z całego zbioru danych, na którym był uczony, więc używanie go jako podstawę\n",
+    "do dalszego ulepszania najprawdopodobniej nie porwadziłoby do uzyskania wymiernych korzyści. \n",
+    "W taki sposób stwierdziliśmy, że najciekawszym i(być może) najefektywniejszym podejściem będzie \n",
+    "zastosowanie algorytmu genetycznego operującego na wagach połączeń międzyneuronowych.\n",
     "</p>\n"
    ],
    "metadata": {
