Finished quality paragraph

--- a/sprawozdanie.ipynb
+++ b/sprawozdanie.ipynb
@@ -117,42 +117,57 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Sposób przeprowadzania testów\n",
+    "## Ocena jakości modelu\n",
     "<p style='text-align: justify;'>\n",
-    "Aby ocenić jakość modelu, należy najpierw go przetestować pod kątem stabilności oraz wiarygodności. Model \n",
-    "staje  się stabilny w momencie, gdy wyniki osiągane w kolejnych grach przyjmują zbliżone do siebie wartości. \n",
-    "Aby osiągnąć stan uznawany za  stabilny, wymagane jest trenowanie modelu na odpowiedniej (nie za małej) liczbie gier. \n",
-    "Z kolei jeśli chodzi o wiarygodność, to osiągane przez dany model wyniki uznajemy za wiarygodne, kiedy nie są wypaczone \n",
-    "przez losowe warunki początkowe. Aby określić wiarygodność wyników, należy wielokrotnie wytrenować model i określić \n",
-    "ich tendencję, na przykład poprzez wyciągnięcie z nich średniej.\n",
-    "\n",
-    "\n",
-    "Natomiast wiarygodność danego modelu testujemy za pomocą wielokrotnego trenowania go od podstaw, ponieważ wyniki po \n",
-    "tylko jednej próbie mogą być wypaczone ze względu na losowe warunki początkowe. Na przykład model z bardzo dobrymi predyspozycjami \n",
-    "do danego zadania może trafić na złe warunki początkowe w trakcie trenowania, przez co wyniki przez niego osiągane \n",
-    "będą co najwyżej mierne. Natomiast inny model o słabych predyspozycjach do danego zadania może trafić na niemalże perfekcyjne \n",
-    "warunki początkowe, przez co jego rezultaty będą złudnie dobre, jednak przy próbie ponownego jego wytrenowania rezultaty \n",
-    "te będą zgodne z jego predyspozycjami. Przez to większa liczba trenowań od podstaw daje równe szanse wariantom modeli na zaprezentowanie swoich\n",
-    "możliwości i wiarygodną ich ocenę.\n",
-    "\n",
-    "\n",
-    "Większa ilość treningów daje agentom równe szanse na podobne wyniki\n",
-    "\n",
-    "Wiarygodny sposób testowania i porównywania wyników osiąganych przez poszczególne wersje agentów \n",
-    "\n",
-    "wypracowaliśmy dopiero podczas zaawansowanych prac nad projektem (wynika to z faktu, że musieliśmy nabyć swego \n",
-    "rodzaju obycie w środowisku Cart Pole). Wtedy też zauważyliśmy, że zdecydowana większość agentów zaczyna osiągać \n",
-    "stabilne rezultaty po około 200 rozegranych grach. \n",
-    "\n",
-    "Ponadto każdy z agentów na początku uczy się interakcji ze \n",
-    "środowiskiem w sposób losowy, więc część agentów może mieć po prostu szczęście, co również należy wziąć pod uwagę przy \n",
-    "porównywaniu poszczególnych wariantów modeli ze sobą. Tak więc zdecydowaliśmy, że wariant będziemy trenować \n",
-    "dokładnie trzy razy, za każdym razem przeznaczając około 100 gier na naukę i eksplorację, a następne 100 gier \n",
-    "do oceny, czyli z wyników w nich osiągniętych zostanie wyciągnięta średnia, aby na samym końcu wyciągnąć średnią \n",
-    "ze średnich ze wszystkich trzech trenowań danego agenta.\n",
-    "</p>\n",
-    "\n"
+    "Aby rzetelnie ocenić jakość modelu, należy najpierw upewnić się, że wyniki przez niego osiągane są stabilne oraz \n",
+    "wiarygodne. Mianem stabilnych określamy je wtedy, gdy w trakcie rozgrywania kolejnych gier przyjmują one zbliżone \n",
+    "do siebie wartości. Aby osiągnąć taki rezultat, wymagane jest trenowanie modelu na odpowiedniej \n",
+    "(nie za małej) liczbie gier. Metodą prób i błędów określiliśmy, że dla różnych modeli w środowisku Cart Pole \n",
+    "liczba ta oscyluje przeważnie w granicach 200.\n",
+    "</p>\n"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<p style='text-align: justify;'>\n",
+    "Z kolei jeśli chodzi o wiarygodność, to uzyskiwane przez dany model rezultaty uznajemy za wiarygodne wtedy, gdy \n",
+    "nie są one wypaczone przez losowe warunki początkowe. Istnieją dwa różne podejścia pomagające w zapewnieniu \n",
+    "wiarygodności wyników:\n",
+    "</p>\n",
+    "\n",
+    "1. Trenowanie każdego modeli w identycznych warunków początkowych\n",
+    "2. Zastosowanie pewnej funkcji oceny, np. wyciągnięcia średniej z kilku różnych prób wytrenowania tego samego modelu.\n",
+    "\n",
+    "<p style='text-align: justify;'>\n",
+    "Ze względu na to, że ideą głębokiego Q-learningu jest eksploracja środowiska w sposób losowy, nasz wybór musiał \n",
+    "paść na opcję numer 2.\n",
+    "</p>\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<p style='text-align: justify;'>\n",
+    "Zważając na powyższe rozważania zdecydowaliśmy, że każdy z naszych modeli będzie trenowany dokładnie cztery \n",
+    "razy po dwieście gier. Z rezultatów osiąganych we wszystkich czterech podejściach wyciągniemy średnią, a \n",
+    "następnie porównamy ją z innymi modelami. Dzięki temu będziemy w stanie określić, jak poszczególne modele \n",
+    "wypadają na tle innych.\n",
+    "</p>"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {
     "collapsed": false
    }
