--- a/sprawozdanie.ipynb
+++ b/sprawozdanie.ipynb
@@ -99,30 +99,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Etapy działania\n",
-    "Podsumowując przeprowadzoną powyżej analizę, zdecydowaliśmy się podzielić realizację projektu na następujące \n",
-    "fazy:\n",
-    "1. Implementacja i gromadzenie rezultatów naiwnego agenta, który podejmuje decyzje w sposób losowy. Posłuży on \n",
-    "jako wyznacznik do porównywania innych modeli.\n",
-    "2. Implementacja i gromadzenie rezultatów agenta wykorzystującego prostą sieć neuronową.\n",
-    "3. Modyfikacja implementacji agenta oraz parametrów sieci neuronowej w celu poprawy osiąganych rezultatów.\n",
-    "4. Wytrenowanie początkowej populacji agentów i zastosowanie algorytmu genetycznego do stworzenia osobnika z \n",
-    "jak najlepiej dostosowanymi wagami międzyneuronowymi.\n",
-    "5. Porównanie osiągniętych rezultatów i wyciągnięcie wniosków z doświadczenia.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "## Ocena jakości modelu\n",
     "<p style='text-align: justify;'>\n",
     "Aby rzetelnie ocenić jakość modelu, należy najpierw upewnić się, że wyniki przez niego osiągane są stabilne oraz \n",
     "wiarygodne. Mianem stabilnych określamy je wtedy, gdy w trakcie rozgrywania kolejnych gier przyjmują one zbliżone \n",
     "do siebie wartości. Aby osiągnąć taki rezultat, wymagane jest trenowanie modelu na odpowiedniej \n",
-    "(nie za małej) liczbie gier. Metodą prób i błędów określiliśmy, że dla różnych modeli w środowisku Cart Pole \n",
+    "(nie za małej) liczbie gier. Metodą prób i błędów określiliśmy, że dla różnych modeli w naszym środowisku treningowym\n",
     "liczba ta oscyluje przeważnie w granicach 200.\n",
     "</p>\n"
    ],
@@ -157,9 +139,7 @@
     "<p style='text-align: justify;'>\n",
     "Zważając na powyższe rozważania zdecydowaliśmy, że każdy z naszych modeli będzie trenowany dokładnie cztery \n",
     "razy po dwieście gier. Z rezultatów osiąganych we wszystkich czterech podejściach wyciągniemy średnią, a \n",
-    "następnie porównamy ją z innymi modelami. Dzięki temu będziemy w stanie określić, jak poszczególne modele \n",
-    "wypadają na tle innych.\n",
-    "</p>"
+    "następnie porównamy ją z innymi modelami."
    ],
    "metadata": {
     "collapsed": false
@@ -175,25 +155,32 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Ograniczenia sprzętowe\n",
-    "<p style='text-align: justify;'>\n",
-    "W momencie gdy zaimplementowaliśmy prostego i stosunkowo uniwersalnego agenta, który mógł być \n",
-    "trenowany z wykorzystaniem większości środowisk dostępnych poprzez interfejs AI Gym, okazało się, \n",
-    "że nasz sprzęt nie jest wystarczająco wydajny, aby zrealizować ten projekt w akceptowalnych ramach \n",
-    "czasowych. Mówiąc konkretniej, trenowanie naszego modelu do stopnia, w którym jego wyniki są \n",
-    "powtarzalne i można zacząć wyciągać z nich wnioski, w najprostszym środowisku(CartPole) zajmuje \n",
-    "około 10 minut, natomiast w drugim co do złożoności LunarLander czas ten wzrasta aż do 45 minut. \n",
-    "Po oszacowaniu, że do zakończenia projektu będziemy musieli trenować model w różnych konfiguracjach \n",
-    "blisko 100 razy, liczba 75 godzin spędzona jednynie na trenowaniu LunarLandera byłaby zbyt duża.\n",
-    "</p>\n",
-    "\n",
+    "## Etapy działania\n",
+    "Podsumowując przeprowadzoną powyżej analizę, zdecydowaliśmy się podzielić realizację projektu na następujące \n",
+    "fazy:\n",
+    "1. Implementacja i gromadzenie rezultatów naiwnego agenta, który podejmuje decyzje w sposób losowy. Posłuży on \n",
+    "jako wyznacznik do porównywania innych modeli.\n",
+    "2. Implementacja i gromadzenie rezultatów agenta wykorzystującego prostą sieć neuronową.\n",
+    "3. Modyfikacja implementacji agenta oraz parametrów sieci neuronowej w celu poprawy osiąganych rezultatów.\n",
+    "4. Wytrenowanie początkowej populacji agentów i zastosowanie algorytmu genetycznego do stworzenia osobnika z \n",
+    "jak najlepiej dostosowanymi wagami międzyneuronowymi.\n",
+    "5. Porównanie osiągniętych rezultatów i wyciągnięcie wniosków z doświadczenia.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Zastosowane technologie\n",
     "<p style='text-align: justify;'>\n",
-    "Kod projektu napisaliśmy w języku Python w wersji 3.6, z którego znakomita większość wykonuje się \n",
-    "na procesorze. Karta graficzna jest odpowiedzialna za przeprowadzanie operacji czerpiących wymierne \n",
-    "korzyści z wielowątkowości, a więc za trenowanie sieci neuronowej. Sama sieć oraz wszelkie operacje \n",
-    "z nią związane pochodzą z wysokopoziomowego API Kerasa bazującego na bibliotece TensorFlow. Jeśli \n",
-    "zaś chodzi o środowisko, w którym odbywa się trenowanie, to jest to CartPole z biblioteki AI Gym.\n",
+    "Kod projektu napisaliśmy w języku Python w wersji 3.6. Sieć neuronowa oraz wszelkie struktury i metody\n",
+    "z nią  związane pochodzą z wysokopoziomowego API Kerasa bazującego na bibliotece TensorFlow. Jeśli zaś \n",
+    "chodzi o samo środowisko do trenowania agenta, wykorzystaliśmy zestaw narzędzi AI Gym, a dokładniej\n",
+    "środowisko gry Cart Pole. Ponadto aby maksymalnie wykorzystać możliwości sprzętowe zdecydowaliśmy, że \n",
+    "części kodu wymagające wykonywania sekwencyjnego będą uruchamiane z użyciem procesora, a fragmenty \n",
+    "możliwe do zrównoleglenia obsłuży karta graficzna. \n",
     "</p>\n"
    ],
    "metadata": {
@@ -203,11 +190,24 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Dygresja na temat podjętych decyzji\n",
+    "<p style='text-align: justify;'>\n",
+    "Pierwszą wersję modelu stworzyliśmy z myślą o uniwersalności. Zasadniczo była ona zdolna do współpracy z \n",
+    "większością środowisk dostępnych poprzez interfejs AI Gym. Dzięki temu zabiegowi byliśmy w stanie przeprowadzić \n",
+    "serię prób pozwalających na wyłonienie najlepszego kandydata do dalszego ulepszania modelu. Testy zaczęliśmy od \n",
+    "bardziej złożonych środowisk (BipedalWalker-v2) poprzez te średnio skomplikowane (LunarLander-v2) aż po \n",
+    "najłatwiejsze (CartPole-v1). Niestety okazało się, że nasz sprzęt nie jest w stanie wytrenowaćsieci neuronowej \n",
+    "dla żadnego z zaawansowanych środowisk w akceptowalnych ramach czasowych.\n",
+    "</p>\n",
     "\n",
-    "\n",
-    "Celem projektu jest stworzenie i wytrenowanie agenta DQN w taki sposób, aby osiągał jak najlepsze rezultaty w grze\n",
-    "typu Cart Pole.\n",
-    "\n"
+    "<p style='text-align: justify;'>\n",
+    "Mówiąc konkretniej, trenowanie naszego modelu do stopnia, w którym jego wyniki są powtarzalne i pozwalają na \n",
+    "wyciąganie sensownych wniosków, zajmuje około 10 minut w najprostszym środowisku (CartPole). Natomiast w drugim \n",
+    "co do złożoności LunarLander czas ten jest niemal pięciokrotnie większy. Idąc dalej, po oszacowaniu, że do \n",
+    "zakończenia projektu będziemy musieli trenować model w różnych konfiguracjach blisko 100 razy, liczba 75 godzin \n",
+    "spędzonych na samym oczekiwaniu na wytrenowanie się sieci neuronowej dla LunarLandera byłaby zbyt duża. \n",
+    "Na tej podstawie zdecydowaliśmy, że najlepszym rozwiązaniem będzie wykorzystanie środowiska Cart Pole.\n",
+    "</p>\n"
    ],
    "metadata": {
     "collapsed": false
@@ -216,7 +216,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Model losowy"
+    "## Trenowanie i implementacja"
    ],
    "metadata": {
     "collapsed": false
