Introduction to source code

--- a/sprawozdanie.ipynb
+++ b/sprawozdanie.ipynb
@@ -78,8 +78,15 @@
     "\n",
     "1. Kształt sieci neuronowej\n",
     "2. Wagi połączeń międzyneuronowych\n",
-    "3. Dane przechowywane w pamięci agentów\n",
-    "\n",
+    "3. Dane przechowywane w pamięci agentów\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "<p style='text-align: justify;'>\n",
     "Po dokładnym przeanalizowaniu powyższych możliwości zdecydowaliśmy się odrzucić opcje numer 1 oraz 3. \n",
     "O wyeliminowaniu manipulacji kształtem sieci neuronowej zadecydował fakt, że wolimy skupić się na\n",
@@ -91,6 +98,24 @@
     "najefektywniejszym podejściem będzie zastosowanie algorytmu genetycznego operującego na wagach połączeń \n",
     "międzyneuronowych.\n",
     "</p>\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Etapy działania\n",
+    "Podsumowując przeprowadzoną powyżej analizę, zdecydowaliśmy się podzielić realizację projektu na następujące \n",
+    "fazy:\n",
+    "1. Implementacja i gromadzenie rezultatów naiwnego agenta, który podejmuje decyzje w sposób losowy. Posłuży on \n",
+    "jako wyznacznik do porównywania innych modeli.\n",
+    "2. Implementacja i gromadzenie rezultatów agenta wykorzystującego prostą sieć neuronową.\n",
+    "3. Modyfikacja implementacji agenta oraz parametrów sieci neuronowej w celu poprawy osiąganych rezultatów.\n",
+    "4. Wytrenowanie początkowej populacji agentów i zastosowanie algorytmu genetycznego do stworzenia osobnika z \n",
+    "jak najlepiej dostosowanymi wagami międzyneuronowymi.\n",
+    "5. Porównanie osiągniętych rezultatów i wyciągnięcie wniosków z doświadczenia.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -139,32 +164,8 @@
     "<p style='text-align: justify;'>\n",
     "Zważając na powyższe rozważania zdecydowaliśmy, że każdy z naszych modeli będzie trenowany dokładnie cztery \n",
     "razy po dwieście gier. Z rezultatów osiąganych we wszystkich czterech podejściach wyciągniemy średnią, a \n",
-    "następnie porównamy ją z innymi modelami."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Etapy działania\n",
-    "Podsumowując przeprowadzoną powyżej analizę, zdecydowaliśmy się podzielić realizację projektu na następujące \n",
-    "fazy:\n",
-    "1. Implementacja i gromadzenie rezultatów naiwnego agenta, który podejmuje decyzje w sposób losowy. Posłuży on \n",
-    "jako wyznacznik do porównywania innych modeli.\n",
-    "2. Implementacja i gromadzenie rezultatów agenta wykorzystującego prostą sieć neuronową.\n",
-    "3. Modyfikacja implementacji agenta oraz parametrów sieci neuronowej w celu poprawy osiąganych rezultatów.\n",
-    "4. Wytrenowanie początkowej populacji agentów i zastosowanie algorytmu genetycznego do stworzenia osobnika z \n",
-    "jak najlepiej dostosowanymi wagami międzyneuronowymi.\n",
-    "5. Porównanie osiągniętych rezultatów i wyciągnięcie wniosków z doświadczenia.\n"
+    "następnie porównamy ją z innymi modelami.\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
@@ -198,8 +199,15 @@
     "bardziej złożonych środowisk (BipedalWalker-v2) poprzez te średnio skomplikowane (LunarLander-v2) aż po \n",
     "najłatwiejsze (CartPole-v1). Niestety okazało się, że nasz sprzęt nie jest w stanie wytrenowaćsieci neuronowej \n",
     "dla żadnego z zaawansowanych środowisk w akceptowalnych ramach czasowych.\n",
-    "</p>\n",
-    "\n",
+    "</p>\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "<p style='text-align: justify;'>\n",
     "Mówiąc konkretniej, trenowanie naszego modelu do stopnia, w którym jego wyniki są powtarzalne i pozwalają na \n",
     "wyciąganie sensownych wniosków, zajmuje około 10 minut w najprostszym środowisku (CartPole). Natomiast w drugim \n",
@@ -216,7 +224,39 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Trenowanie i implementacja"
+    "## Trenowanie i implementacja\n",
+    "### Preludium\n",
+    "<p style='text-align: justify;'>\n",
+    "W poniższych podrozdziałach zawarliśmy przegląd wszystkich wykonanych przez nas modeli. Prezentowane są one w \n",
+    "sposób chronologiczny względem ich powstania. Prezentacji podlega zarówno kod źródłowy modelu jak i wyniki przez niego \n",
+    "osiągane. Pozwoliliśmy sobie pominąć komentowanie oczywistych i trywialnych fragmentów kodu, aby nie zaciemniać tego, \n",
+    "co najważniejsze, czyli rezultatów i wniosków z tworzenia coraz to lepszych modeli.\n",
+    "</p>\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Naiwny agent losowy\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Importowanie niezbędnych bibliotek\n",
+    "<p style='text-align: justify;'>\n",
+    "Do zaimplementowania tego agenta posłużyły nam trzy biblioteki:\n",
+    "</p>\n",
+    "\n",
+    "- random - jak sama nazwa wskazuje, odpowiedzialna jest za generowanie losowych wartości\n",
+    "- gym - autorstwa Open AI, udostępnia interfejs do korzystania z środowiska Cart Pole\n",
+    "- tensorflow - w tym wypadku służy jedynie do określenia, na jakim podzespole (GPU czy CPU) będzie wykonywany kod \n"
    ],
    "metadata": {
     "collapsed": false
@@ -229,8 +269,52 @@
    "source": [
     "import random\n",
     "import gym\n",
-    "import tensorflow as tf\n",
-    "a = random.randint()\n"
+    "import tensorflow as tf\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Przypisanie wartości stałym\n",
+    "<p style='text-align: justify;'>\n",
+    "W każdym modelu będziemy potrzebować pewnej ilości stałych, określających warunki, w których przeprowadzane będzie \n",
+    "trenowanie oraz testy. \n",
+    "</p>\n",
+    "\n",
+    "- NUM_OF_EPISODES - liczba gier rozegranych podczas szkolenia jednego modelu.\n",
+    "- FRAMES_PER_EPISODE - maksymalna liczba klatek równa liczbie akcji, które podejmuje agent.\n",
+    "- GAME_ID - nazwa środowiska, w którym będzie operował agent.\n",
+    "- NUM_OF_MODELS - liczba modeli wytrenowanych od podstaw.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found solution at [-0.46316012] with value [-0.7399067]\n"
+     ]
+    }
+   ],
+   "source": [
+    "NUM_OF_EPISODES = 100\n",
+    "FRAMES_PER_EPISODE = 1000\n",
+    "GAME_ID = \"CartPole-v1\"\n",
+    "CPU_ID = \"/device:CPU:0\"\n",
+    "NUM_OF_MODELS = 4"
    ],
    "metadata": {
     "collapsed": false,
@@ -244,25 +328,27 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "NUM_OF_EPISODES = 200\n",
-    "FRAMES_PER_EPISODE = 1000\n",
-    "BATCH_SIZE = 32\n",
-    "GAME_ID = 'CartPole-v1'\n",
-    "CPU_ID = '/device:CPU:0'\n",
-    "print(0)\n"
+    "with tf.device(CPU_ID):\n",
+    "    game = gym.make(GAME_ID)\n",
+    "    num_of_actions = game.action_space.n\n",
+    "    is_done = False\n",
+    "    avgs = []\n",
+    "    for model in range(NUM_OF_MODELS):\n",
+    "        scores = []\n",
+    "        for episode in range(NUM_OF_EPISODES):\n",
+    "            current_state = game.reset()\n",
+    "            for frame in range(FRAMES_PER_EPISODE):\n",
+    "                game.render()\n",
+    "                action = random.randrange(num_of_actions)\n",
+    "                new_state, gained_reward, is_done, info = game.step(action)\n",
+    "                if is_done:\n",
+    "                    scores.append(frame)\n",
+    "                    break\n",
+    "        avgs.append(sum(scores)/len(scores))\n",
+    "    for i, avg in enumerate(avgs):\n",
+    "        print(\"Model {} has avarage: {}\".format(i, avg))\n",
+    "    print(\"Overall avg for all models: {}\".format(sum(avgs)/len(avgs)))"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
